banking-ml-k8s/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-ml-service
  namespace: your-k8s-namespace
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 6000
      protocol: TCP
  selector:
    app: banking-ml
